# supaviber

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  biome.jsonc  package.json  pyproject.toml  tsconfig.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: validate-skills.yml
.templates/skill-template/: SKILL.md
agents/: README.md
commands/: README.md
docs/: METADATA-CONVENTIONS.md
hooks/: README.md  hooks.json
scripts/: create-skill.sh  docs-list.ts  validate-skills.sh
skills/: README.md
skills/coding-standards/: SKILL.md
skills/coding-standards/references/: EXAMPLES.md  LANGUAGE-SPECIFICS.md
skills/git-safety/: SKILL.md
skills/smart-docs/: SKILL.md
