[project]
name = "supaviber"
version = "0.1.0"
description = "Your personal vibe coding toolkit - custom skills, agents, and commands"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "skills-ref @ git+https://github.com/agentskills/agentskills.git#subdirectory=skills-ref",
]

[tool.uv.sources]
skills-ref = { git = "https://github.com/agentskills/agentskills.git", subdirectory = "skills-ref" }
